src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_Auto_Name_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If TRUE, this field stops the auto-naming workflow from firing.</description>
        <inlineHelpText>If TRUE, this field stops the auto-naming workflow from firing.</inlineHelpText>
        <label>Campaign Auto Name Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_End_Date_Month_Text__c</fullName>
        <description>If the campaign end date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a numbered month.</description>
        <formula>IF(EndDate &lt;&gt; null, 
CASE(
MONTH(StartDate),
1, &quot;1-Jan&quot;,
2, &quot;2-Feb&quot;,
3, &quot;3-Mar&quot;,
4, &quot;4-Apr&quot;,
5, &quot;5-May&quot;,
6, &quot;6-Jun&quot;,
7, &quot;7-Jul&quot;,
8, &quot;8-Aug&quot;,
9, &quot;9-Sept&quot;,
10, &quot;10-Oct&quot;,
11, &quot;11-Nov&quot;,
&quot;12-Dec&quot;
), 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the campaign end date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a numbered month.</inlineHelpText>
        <label>Campaign End Date Month (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_End_Date_Year_Text__c</fullName>
        <description>If the campaign end date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a the year in text format. This field helps facilitate reporting that features column groupings.</description>
        <formula>IF(EndDate &lt;&gt;null,TEXT(YEAR(StartDate)),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the campaign end date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a the year in text format. This field helps facilitate reporting that features column groupings.</inlineHelpText>
        <label>Campaign End Date Year (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Line_of_Business__c</fullName>
        <description>Picklist describes the line of business this campaign is intended to engage.</description>
        <inlineHelpText>Picklist describes the line of business this campaign is intended to engage.</inlineHelpText>
        <label>Campaign Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit Consultants</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Health Plans</fullName>
                </value>
                <value>
                    <fullName>Health Systems</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>PBMS</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Start_Date_Month_Text__c</fullName>
        <description>If start date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a numbered month.</description>
        <formula>IF( StartDate &lt;&gt; null, 
CASE(
MONTH(StartDate),
1, &quot;1-Jan&quot;,
2, &quot;2-Feb&quot;,
3, &quot;3-Mar&quot;,
4, &quot;4-Apr&quot;,
5, &quot;5-May&quot;,
6, &quot;6-Jun&quot;,
7, &quot;7-Jul&quot;,
8, &quot;8-Aug&quot;,
9, &quot;9-Sep&quot;,
10, &quot;10-Oct&quot;,
11, &quot;11-Nov&quot;,
&quot;12-Dec&quot;
), 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If start date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a numbered month.</inlineHelpText>
        <label>Campaign Start Date Month (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Start_Date_Year_Text__c</fullName>
        <description>If the campaign start date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a the year in text format. This field helps facilitate reporting that features grouping.</description>
        <formula>IF(StartDate &lt;&gt;null,TEXT(YEAR(StartDate)),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the campaign start date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a the year in text format. This field helps facilitate reporting that features column groupings.</inlineHelpText>
        <label>Campaign Start Date Year (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_objective__c</fullName>
        <description>Main goal of the campiagn, lead generation, brand awareness</description>
        <inlineHelpText>A written description that explains the main purpose of the event, email, etc...</inlineHelpText>
        <label>Campaign Objective</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand Awareness</fullName>
                    <default>true</default>
                    <label>Brand Awareness</label>
                </value>
                <value>
                    <fullName>Lead Generation</fullName>
                </value>
                <value>
                    <fullName>Relationship Development</fullName>
                </value>
                <value>
                    <fullName>Thought Leadership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Method_Detail__c</fullName>
        <description>Describes the method of delivery for out bound messaging and inbound data capture. This clarifies to the user how the campaign is intending on how to capture audience data.</description>
        <inlineHelpText>Describes the method of delivery for out bound messaging and inbound data capture. This clarifies to the user how the campaign is intending on how to capture audience data.</inlineHelpText>
        <label>Delivery Method Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Non-Pardot Form</fullName>
                </value>
                <value>
                    <fullName>Non-Pardot Whitepaper</fullName>
                </value>
                <value>
                    <fullName>Pardot Asset</fullName>
                </value>
                <value>
                    <fullName>Pardot Email</fullName>
                </value>
                <value>
                    <fullName>Pardot Form</fullName>
                </value>
                <value>
                    <fullName>Pardot LandingPage</fullName>
                </value>
                <value>
                    <fullName>Pardot URL</fullName>
                </value>
                <value>
                    <fullName>Pardot Whitepaper</fullName>
                </value>
                <value>
                    <fullName>Social Post</fullName>
                </value>
                <value>
                    <fullName>Webinar RSVP Form</fullName>
                </value>
                <value>
                    <fullName>Website RFI Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <description>This field unpacks record type into &apos;Delivery Methods&apos; so that marketers can intuitively report on campaigns by delivery.</description>
        <inlineHelpText>This field unpacks record type into &apos;Delivery Methods&apos; so that marketers can intuitively report on campaigns by delivery.</inlineHelpText>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Campaign-No Delivery</fullName>
                    <default>true</default>
                    <label>Internal Campaign-No Delivery</label>
                </value>
                <value>
                    <fullName>Email/Digital</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sign-up</fullName>
                </value>
                <value>
                    <fullName>Subscribe/Opt-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Parent_Campaign__c</fullName>
        <description>Looks to record type and provides the value of TRUE if the campaign is a &apos;Parent Campaign&apos; Record Type</description>
        <formula>IF(RecordTypeId=&quot;0122f00000066gDAAQ&quot;,TRUE,FALSE)</formula>
        <inlineHelpText>Looks to record type and provides the value of TRUE if the campaign is a &apos;Parent Campaign&apos; Record Type</inlineHelpText>
        <label>Is Parent Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the campaign is being used as a template. Impacts auto-naming conventions.</description>
        <inlineHelpText>Indicates that the campaign is being used as a template. Impacts auto-naming conventions.</inlineHelpText>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Segment_Audience__c</fullName>
        <description>Text that describes the internal short-hand for the segmentation and/or audience that the campaign articulates.</description>
        <inlineHelpText>Text that describes the internal short-hand for the segmentation and/or audience that the campaign articulates.</inlineHelpText>
        <label>List Segment/Audience</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Recommended_Pardot_Folder__c</fullName>
        <description>Text field that is populated with a recommended folder that should either be used and/or created if integrating this child campaign in integrating in Pardot.</description>
        <inlineHelpText>Text field that is populated with a recommended folder that should either be used and/or created if integrating this child campaign in integrating in Pardot.</inlineHelpText>
        <label>Recommended Pardot Folder</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Pardot_Tags__c</fullName>
        <description>Workflow populates this field with recommended tags that should be used when integrating with Pardot.</description>
        <inlineHelpText>Workflow populates this field with recommended tags that should be used when integrating with Pardot.</inlineHelpText>
        <label>Recommended Pardot Tags</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Round_Sequence_of_Campaign_Communication__c</fullName>
        <description>If this campaign is a part of a series of campaigns, this number represents the sequence or order in which this campaign is supports the larger campaign.</description>
        <inlineHelpText>If this campaign is a part of a series of campaigns, this number represents the sequence/round/order in which this campaign supports the parent campaigns sequence.</inlineHelpText>
        <label>Round/Sequence of Campaign Communication</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <description>This is the internal name that will be used for the campaign. This will help support reporting and list view columns.</description>
        <inlineHelpText>This is the internal name that will be used for the campaign. This will help support reporting and list view columns.</inlineHelpText>
        <label>Short Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Campaign_Id__c</fullName>
        <description>The Pardot identifier for the connected campaign record</description>
        <externalId>true</externalId>
        <label>Pardot Campaign Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pi__Pardot_Has_Dependencies__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if Pardot has marketing assets using this campaign</description>
        <label>Pardot Has Dependencies</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Org_Campaign_Hierarchy</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Campaign_Hierarchy</label>
    </listViews>
    <listViews>
        <fullName>X2018_Livongo_Marketing_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Claypool</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2018</value>
        </filters>
        <label>2018 Livongo Marketing Campaigns</label>
    </listViews>
    <listViews>
        <fullName>all_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Inactive Campaigns</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Direct_Mail_List</fullName>
        <active>true</active>
        <description>This is a record type that should be used for marketing users and child marketing campaigns that expresses Leads/Contacts that will be engaged through direct mail delivery methods.</description>
        <label>Direct Mail List</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_Digital_Delivery_List</fullName>
        <active>true</active>
        <description>This is a record type that should be used for marketing users and child marketing campaigns that expresses Leads/Contacts that will be engaged through Email and/or digital delivery methods.</description>
        <label>Email/Digital Delivery List</label>
    </recordTypes>
    <recordTypes>
        <fullName>Interest_Area_Product_Subscription_List</fullName>
        <active>true</active>
        <description>This is a record type that should be used for marketing users and child marketing campaigns that expresses Leads/Contacts that have opted into a list as a result of providing interest area data, product purchases, and/or by subscribing to campaigns.</description>
        <label>Interest Area/Product/Subscription List</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parent_Campaign_List</fullName>
        <active>true</active>
        <description>This is a record type that should be used for Marketing users who want to express up to 3 levels of campaign hierarchy, which facilities campaign rollups for reporting on ROI.</description>
        <label>Parent Campaign List</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sign_up_List</fullName>
        <active>true</active>
        <description>This is a record type that should be used for marketing users and child marketing campaigns that expresses Leads/Contacts that have taken an action to sign-up for something. This should be used for event RSVPs, Webinar sign-ups, and RFI sign-ups, etc.</description>
        <label>Sign-up List</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>This is a record type that should be used for non-marketing users and non marketing campaigns</description>
        <label>Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Suppression_List</fullName>
        <active>true</active>
        <description>This is a record type that should be used for users to express Leads/Contacts that should be suppressed from other lists.</description>
        <label>Suppression List</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
    <validationRules>
        <fullName>No_update_by_SalesTeam_member</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Id == &apos;00eA00000019KCD&apos;</errorConditionFormula>
        <errorMessage>Campaign cannot be updated by Sales Team member. Please work with marketing to update the campaign.</errorMessage>
    </validationRules>
</CustomObject>